Add class 'mumbleReader' to target layer.

--- a/mumble.html
+++ b/mumble.html
@@ -23,6 +23,6 @@
 		
 		<!-- This layer is where the resulting tree object is returned.
 			 See callback argument in JS, above. -->
-		<div id="mum0"></div>
+		<div id="mum0" class="mumbleReader"></div>
 	</body>
 </html>
