--- a/mumble.html
+++ b/mumble.html
@@ -15,6 +15,7 @@
 
 			var mr = new mumbleReader('http://tx.mumbledog.com/mumble.php?port=64738&callback=?', 'mum0'); //init the object
 			mr.setlenght(16);
+			mr.setimgpath('http://fwaggle.github.com/mumble-cvp.js/');
 
 			function load_mum() {
 				mr.start(); //This will reload the viewer
