Fix typo lenght->length, remote extraneous truncate routine when substring() will do the trick for now.

--- a/mumble.html
+++ b/mumble.html
@@ -14,7 +14,7 @@
 			});
 
 			var mr = new mumbleReader('http://tx.mumbledog.com/mumble.php?port=64738&callback=?', 'mum0'); //init the object
-			mr.setlenght(16);
+			mr.setlength(16);
 			mr.setimgpath('http://fwaggle.github.com/mumble-cvp.js/');
 
 			function load_mum() {
