Update default demonstration CVP URL.

--- a/mumble.html
+++ b/mumble.html
@@ -16,7 +16,7 @@
 				window.setInterval("load_mum();", 30000); //This will load the viewer every 30 seconds
 			});
 
-			var mr = new mumbleReader('http://tx.mumbledog.com/mumble.php?port=64738&callback=?', 'mum0'); //init the object
+			var mr = new mumbleReader('http://tx.mumbledog.com/mumble.php?ip=72.9.158.17&port=64738&callback=?', 'mum0'); //init the object
 			mr.setlength(16); // Set the number of characters to truncat at (example of 16 for sidebars)
 			mr.setimgpath('http://fwaggle.github.com/mumble-cvp.js/'); // Set location of images for icons
 
