Rename project to MumbleReader.js - I don't feel I changed enough to warrant the silly rename.

--- a/mumble.html
+++ b/mumble.html
@@ -18,7 +18,7 @@
 
 			var mr = new mumbleReader('http://tx.mumbledog.com/mumble.php?ip=72.9.158.17&port=64738&callback=?', 'mum0'); //init the object
 			mr.setlength(16); // Set the number of characters to truncat at (example of 16 for sidebars)
-			mr.setimgpath('http://fwaggle.github.com/mumble-cvp.js/'); // Set location of images for icons
+			mr.setimgpath('http://fwaggle.github.com/MumbleReader.js/'); // Set location of images for icons
 
 			function load_mum() {
 				mr.start(); //This will reload the viewer
